fixed bug on mobile view

--- a/src/assets/scss/_modal_menu.scss
+++ b/src/assets/scss/_modal_menu.scss
@@ -1,7 +1,7 @@
 #modal_menu_wrap {
     position: fixed;
     top: 0;
-    left: -100%;
+    left: -135%;
     background-color: $headerDarkGray;
     color: #111;
     height: auto;
